# zssn

./: .gitignore  README.md  build.sh  manage.py  pyproject.toml
api/: admin.py  models.py  serializers.py  views.py
api/migrations/: 0001_initial.py
interface/: urls.py  views.py
interface/templates/interface/: add_survivor.html  base.html  make_trade.html  resources_report.html  survivor_detail.html  survivors.html  update_location.html
interface/templates/interface/partials/: _header.html
static/css/: global.css
static/js/: sidebar.js
survivors/: models.py  serializers.py
zssn/: settings.py  urls.py
